--- a/app/src/main/res/layout/fragment_create_new_sell.xml
+++ b/app/src/main/res/layout/fragment_create_new_sell.xml
@@ -9,10 +9,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="90dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/background_create_new_fragment"
         android:elevation="2dp"
         android:orientation="vertical"
@@ -42,22 +42,34 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="အမည်"
+                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                     android:textColor="@color/primary_text"
-                    android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/edit_name"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/textInputLayout_name"
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="45dp"
                     android:layout_marginTop="4dp"
-                    android:background="@drawable/background_edit_text"
-                    android:ems="10"
-                    android:hint="အမည်"
-                    android:inputType="textPersonName"
-                    android:paddingStart="16dp"
-                    android:textColorHint="@color/secondary_text"
-                    android:textSize="22sp" />
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/edit_text_color"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edit_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="အမည်"
+                        android:inputType="textPersonName"
+                        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                        android:textColorHint="@color/secondary_text"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+
             </LinearLayout>
 
             <LinearLayout
@@ -74,22 +86,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="မွေးနေ့"
+                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                     android:textColor="@color/primary_text"
-                    android:textSize="22sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_birth_date"
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="4dp"
                     android:background="@drawable/background_edit_text"
                     android:drawableEnd="@drawable/calendar"
                     android:gravity="start|center"
                     android:paddingStart="16dp"
-                    android:paddingEnd="32dp"
+                    android:paddingEnd="16dp"
                     android:text="မွေးနေ့"
-                    android:textColor="@color/primary_text"
-                    android:textSize="22sp" />
+                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                    android:textColor="@color/primary_text" />
             </LinearLayout>
 
             <LinearLayout
@@ -106,22 +119,33 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="မှတ်ပုံတင်"
+                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                     android:textColor="@color/primary_text"
-                    android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/edit_NRC"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/textInputLayout_NRC"
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="45dp"
                     android:layout_marginTop="4dp"
-                    android:background="@drawable/background_edit_text"
-                    android:ems="10"
-                    android:hint="မှတ်ပုံတင်"
-                    android:inputType="textPersonName"
-                    android:paddingStart="16dp"
-                    android:textColorHint="@color/secondary_text"
-                    android:textSize="22sp" />
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/edit_text_color"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edit_NRC"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="မှတ်ပုံတင်"
+                        android:inputType="textPersonName"
+                        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                        android:textColorHint="@color/secondary_text"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
             </LinearLayout>
         </LinearLayout>
 
@@ -145,22 +169,32 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="ဖုန်းနံပါတ်"
+                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                     android:textColor="@color/primary_text"
-                    android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/edit_phNumber"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/textInputLayout_phNumber"
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="45dp"
                     android:layout_marginTop="4dp"
-                    android:background="@drawable/background_edit_text"
-                    android:ems="10"
-                    android:hint="ဖုန်းနံပါတ်"
-                    android:inputType="number"
-                    android:paddingStart="16dp"
-                    android:textColorHint="@color/secondary_text"
-                    android:textSize="22sp" />
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/edit_text_color"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edit_phNumber"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="ဖုန်းနံပါတ်"
+                        android:inputType="textPersonName"
+                        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                        android:textColorHint="@color/secondary_text"/>
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -177,18 +211,38 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="တိုင်း‌‌‌‌‌ဒေသကြီး/ပြည်နယ်"
+                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                     android:textColor="@color/primary_text"
-                    android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <Spinner
-                    android:id="@+id/spinner_state"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/textInputLayout_spinner_state"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="45dp"
                     android:layout_marginTop="4dp"
-                    android:background="@drawable/background_spinner"
-                    android:entries="@array/state"
-                    android:spinnerMode="dropdown" />
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxStrokeColor="@color/edit_text_color"
+                    app:boxStrokeWidth="1dp"
+                    app:hintEnabled="false"
+                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout_spinner_township"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/textInputLayout_name"
+                    app:layout_constraintTop_toTopOf="@+id/textInputLayout_name">
+
+                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                        android:id="@+id/spinner_state"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:inputType="none"
+                        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                        android:textColor="@color/primary_text" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
@@ -206,18 +260,39 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="မြို့နယ်"
+                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                     android:textColor="@color/primary_text"
-                    android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <Spinner
-                    android:id="@+id/spinner_township"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/textInputLayout_spinner_township"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="45dp"
                     android:layout_marginTop="4dp"
-                    android:background="@drawable/background_spinner"
-                    android:entries="@array/state"
-                    android:spinnerMode="dropdown" />
+                    android:layout_weight="1"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxStrokeColor="@color/edit_text_color"
+                    app:boxStrokeWidth="1dp"
+                    app:hintEnabled="false"
+                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout_spinner_township"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/textInputLayout_name"
+                    app:layout_constraintTop_toTopOf="@+id/textInputLayout_name">
+
+                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                        android:id="@+id/spinner_township"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:inputType="none"
+                        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                        android:textColor="@color/primary_text" />
+
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
         </LinearLayout>
 
@@ -234,25 +309,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="လိပ်စာ"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                 android:textColor="@color/primary_text"
-                android:textSize="22sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/edit_address"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayout_address"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="4dp"
-                android:background="@drawable/background_edit_text"
-                android:ems="10"
-                android:gravity="top"
-                android:hint="လိပ်စာ"
-                android:inputType="textMultiLine"
-                android:paddingStart="16dp"
-                android:paddingTop="16dp"
-                android:paddingEnd="16dp"
-                android:textColorHint="@color/secondary_text"
-                android:textSize="22sp" />
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:hintEnabled="false"
+                app:boxStrokeColor="@color/edit_text_color"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusBottomEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="လိပ်စာ"
+                    android:gravity="top"
+                    android:inputType="textMultiLine"
+                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                    android:textColorHint="@color/secondary_text" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -270,20 +355,23 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_save"
-                style="@android:style/Widget.Button"
                 android:layout_width="wrap_content"
-                android:layout_height="70dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="32dp"
-                android:background="@drawable/background_btn"
-                android:paddingStart="32dp"
-                android:paddingEnd="32dp"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                app:cornerRadius="10dp"
                 android:text="သိမ်းမည်"
+                android:textAppearance="@style/TextAppearance.ShweMi.Button"
                 android:textColor="@color/white"
-                android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
