--- a/app/src/main/res/layout/fragment_customer_info_pawn.xml
+++ b/app/src/main/res/layout/fragment_customer_info_pawn.xml
@@ -7,18 +7,18 @@
 
     <ImageView
         android:id="@+id/iv_profile_bg"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="110dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/profile_bg" />
 
     <ImageView
         android:id="@+id/iv_profile"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_profile_bg"
         app:layout_constraintEnd_toEndOf="@+id/iv_profile_bg"
         app:layout_constraintStart_toStartOf="@+id/iv_profile_bg"
@@ -30,8 +30,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="အမည်"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="@+id/tv_label_birth_date"
         app:layout_constraintTop_toTopOf="@+id/iv_profile_bg" />
 
@@ -40,146 +40,127 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="မွေး‌နေ့"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView18"
-        app:layout_constraintStart_toStartOf="@+id/textView18"
+        app:layout_constraintBottom_toTopOf="@+id/tv_label_NRC"
+        app:layout_constraintStart_toStartOf="@+id/tv_label_NRC"
         app:layout_constraintTop_toBottomOf="@+id/tv_label_name" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/tv_label_NRC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="မှတ်ပုံတင်"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_profile_bg"
         app:layout_constraintStart_toEndOf="@+id/iv_profile_bg" />
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="ဒေါ်ကလျာနွဲ့မူရာခင်"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView18"
+        app:layout_constraintEnd_toStartOf="@+id/tv_label_phNumber"
+        app:layout_constraintStart_toEndOf="@+id/tv_label_NRC"
         app:layout_constraintTop_toTopOf="@+id/tv_label_name" />
 
     <TextView
         android:id="@+id/tv_birth_date"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="05-12-1967"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView21"
+        app:layout_constraintBottom_toTopOf="@+id/tv_NRC"
+        app:layout_constraintEnd_toStartOf="@+id/tv_label_address"
         app:layout_constraintStart_toStartOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/tv_NRC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="၁၄/ဟသတ(နိုင်)၁၂၃၄၅၆"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/textView18"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_label_NRC"
         app:layout_constraintStart_toStartOf="@+id/tv_birth_date" />
 
     <TextView
         android:id="@+id/tv_label_phNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="ဖုန်းနံပါတ်"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
-        app:layout_constraintStart_toEndOf="@+id/textView21"
-        app:layout_constraintTop_toTopOf="@+id/tv_name" />
+        app:layout_constraintBottom_toBottomOf="@+id/tv_label_name"
+        app:layout_constraintStart_toEndOf="@+id/tv_NRC"
+        app:layout_constraintTop_toTopOf="@+id/tv_label_name" />
 
     <TextView
         android:id="@+id/tv_label_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="လိပ်စာ"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_birth_date"
         app:layout_constraintStart_toStartOf="@+id/tv_label_phNumber"
         app:layout_constraintTop_toTopOf="@+id/tv_birth_date" />
 
     <TextView
         android:id="@+id/tv_phNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="09 420 12 3456 "
-        android:textColor="@color/primary_text"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_label_phNumber"
-        app:layout_constraintStart_toEndOf="@+id/tv_label_phNumber"
-        app:layout_constraintTop_toTopOf="@+id/tv_label_phNumber" />
-
-    <TextView
-        android:id="@+id/tv_address_township"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ဟင်္သာတမြို့နယ်, "
-        android:textColor="@color/primary_text"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_label_address"
-        app:layout_constraintStart_toStartOf="@+id/tv_phNumber"
-        app:layout_constraintTop_toTopOf="@+id/tv_label_address" />
-
-    <TextView
-        android:id="@+id/tv_address_state"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
-        android:text="ဧရာဝတီတိုင်း‌‌‌ဒေသကြီး"
+        android:text="09 420 12 3456 "
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_address_township"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_label_phNumber"
         app:layout_constraintEnd_toStartOf="@+id/btn_continue"
-        app:layout_constraintStart_toEndOf="@+id/tv_address_township"
-        app:layout_constraintTop_toTopOf="@+id/tv_address_township" />
+        app:layout_constraintStart_toEndOf="@+id/tv_label_phNumber"
+        app:layout_constraintTop_toTopOf="@+id/tv_label_phNumber" />
 
     <TextView
         android:id="@+id/tv_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:text="ဘာရပ်ကွက် ဘာရွာ \nဘာလမ်း ဘယ်အိမ်နံပါတ်  "
+        android:layout_marginEnd="16dp"
+        android:text="ဟင်္သာတမြို့နယ်, ဧရာဝတီတိုင်း‌‌‌ဒေသကြီး \nဘာရပ်ကွက် ဘာရွာ \nဘာလမ်း ဘယ်အိမ်နံပါတ်  "
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tv_address_township"
-        app:layout_constraintTop_toBottomOf="@+id/tv_address_township" />
+        app:layout_constraintEnd_toStartOf="@+id/btn_continue"
+        app:layout_constraintStart_toStartOf="@+id/tv_phNumber"
+        app:layout_constraintTop_toTopOf="@+id/tv_label_address" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_continue"
-        style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/background_btn"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:text="‌ရှေ့ဆက်မည်"
+        android:textAppearance="@style/TextAppearance.ShweMi.Button"
         android:textColor="@color/white"
-        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_address_state"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_phNumber" />
 
@@ -187,9 +168,9 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
         android:background="@color/label_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -199,11 +180,11 @@
         android:id="@+id/tv_label_customer_favItems"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:text="ဝယ်သူနှစ်သက်သည့်ပစ္စည်းများ"
+        android:textAppearance="@style/TextAppearance.ShweMi.Headline6"
         android:textColor="@color/primary_text"
-        android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -215,7 +196,9 @@
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_label_customer_favItems" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_label_customer_favItems"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
