--- a/app/src/main/res/layout/fragment_resell_stock_info_added_pawn_interest.xml
+++ b/app/src/main/res/layout/fragment_resell_stock_info_added_pawn_interest.xml
@@ -37,8 +37,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:text="ပြန်သွင်းထည်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/btn_add"
             app:layout_constraintStart_toEndOf="@+id/iv_bg"
