--- a/app/src/main/res/layout/include_customer_info.xml
+++ b/app/src/main/res/layout/include_customer_info.xml
@@ -10,7 +10,7 @@
         android:id="@+id/chip_gp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,10 +19,10 @@
             android:id="@+id/chip_chain"
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:text="ဆွဲကြိုး"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/chip_text_color"
-            android:textSize="22sp"
             app:chipBackgroundColor="@color/white"
             app:chipCornerRadius="10dp"
             app:chipEndPadding="16dp"
@@ -34,11 +34,11 @@
             android:id="@+id/chip_bracelet"
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="လက်ကောက်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/chip_text_color"
-            android:textSize="22sp"
             app:chipBackgroundColor="@color/white"
             app:chipCornerRadius="10dp"
             app:chipEndPadding="16dp"
@@ -50,11 +50,11 @@
             android:id="@+id/chip_ear_drop"
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="နားဆွဲ"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/chip_text_color"
-            android:textSize="22sp"
             app:chipBackgroundColor="@color/white"
             app:chipCornerRadius="10dp"
             app:chipEndPadding="16dp"
@@ -66,11 +66,11 @@
             android:id="@+id/chip_earring"
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="နားကပ်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/chip_text_color"
-            android:textSize="22sp"
             app:chipBackgroundColor="@color/white"
             app:chipCornerRadius="10dp"
             app:chipEndPadding="16dp"
@@ -82,11 +82,11 @@
             android:id="@+id/chip_chain2"
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="ဘယက်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/chip_text_color"
-            android:textSize="22sp"
             app:chipBackgroundColor="@color/white"
             app:chipCornerRadius="10dp"
             app:chipEndPadding="16dp"
@@ -98,11 +98,11 @@
             android:id="@+id/chip_hand_chain"
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="ဟန်းချိန်း"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/chip_text_color"
-            android:textSize="22sp"
             app:chipBackgroundColor="@color/white"
             app:chipCornerRadius="10dp"
             app:chipEndPadding="16dp"
