--- a/app/src/main/res/layout/include_search_result.xml
+++ b/app/src/main/res/layout/include_search_result.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="45dp"
         android:background="@color/primary"
         android:divider="@color/white"
         android:orientation="horizontal"
@@ -31,8 +31,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="အမည်"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                 android:textColor="@color/white"
-                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -42,8 +42,8 @@
                 android:layout_weight="1.1"
                 android:gravity="center"
                 android:text="ဖုန်းနံပါတ်"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                 android:textColor="@color/white"
-                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -53,8 +53,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="မှတ်ပုံတင်"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                 android:textColor="@color/white"
-                android:textSize="22sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -74,8 +74,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="‌မွေးနေ့"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                 android:textColor="@color/white"
-                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -85,8 +85,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="မြို့နယ်"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                 android:textColor="@color/white"
-                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -96,8 +96,8 @@
                 android:layout_weight="1.1"
                 android:gravity="center"
                 android:text="အကောင့်"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                 android:textColor="@color/white"
-                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -105,8 +105,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1.1"
                 android:gravity="center"
-                android:textColor="@color/white"
-                android:textSize="24sp" />
+                android:textColor="@color/white"/>
 
         </LinearLayout>
 
