--- a/app/src/main/res/layout/item_customer_fav_items.xml
+++ b/app/src/main/res/layout/item_customer_fav_items.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/iv_customerfavItem"
-            android:layout_width="220dp"
-            android:layout_height="200dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -30,8 +30,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="စတားဝေးကြိုး"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="@+id/iv_customerfavItem"
             app:layout_constraintStart_toStartOf="@+id/iv_customerfavItem"
             app:layout_constraintTop_toBottomOf="@+id/iv_customerfavItem" />
@@ -41,8 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="400,000 ကျပ်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
             app:layout_constraintStart_toStartOf="@+id/tv_item_name"
@@ -55,7 +55,7 @@
             android:layout_marginBottom="8dp"
             android:text="ဝန်းကျင်"
             android:textColor="@color/primary_text"
-            android:textSize="14sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tv_item_price"
             app:layout_constraintStart_toStartOf="@+id/tv_item_price"
